--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     implementation 'com.journeyapps:zxing-android-embedded:4.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.jakewharton:butterknife:10.0.0'
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 //tuấn
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
